# EEIC_AI_EXP

./: 1gpu.sh  README.md  annotation.py  calc_cer.py  create_data_list.py  csv_mapping.py  cvtransforms.py  dataset.py  dataset_for_pred.py  frame_divide_to_scene.py  frame_partiton_anno.py  hello.py  hoge.py  lipread_demo.py  main.py  main2.py  main3.py  max_frame.py  model.py  model_attention.py  options.py  phoneme.py  phono2arr.py  phonotactics.py  predictions.txt  pyproject.toml  test.py  test10.py  test11.py  test2.py  test3.py  test4.py  test5.py  test6.py  test7.py  test8.py  test9.py
